--- a/src/main/resources/tool.fxml
+++ b/src/main/resources/tool.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="4.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ImageView fx:id="toolIcon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
-      <Label fx:id="toolName" maxHeight="1.7976931348623157E308" text="" HBox.hgrow="ALWAYS" />
-   </children>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="4.0"
+      xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+   <ImageView fx:id="toolIcon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true"
+              HBox.hgrow="NEVER"/>
+   <Label fx:id="toolName" maxHeight="1.7976931348623157E308" HBox.hgrow="ALWAYS"/>
 </HBox>
